@@ -16,3 +16,6 @@ REFERENCE_XML_FILES =                           \
   $(NULL)
 
 include $(top_srcdir)/docs/pygtk-ref-docs.make
+
+
+EXTRA_DIST += wscript
