@@ -36,3 +36,5 @@ _gnomedesktop.c: _gnomedesktop.defs _gnomedesktop.override
 	    --prefix py$* $*.defs) > gen-$*.c \
 	&& cp gen-$*.c $*.c \
 	&& rm -f gen-$*.c
+
+EXTRA_DIST += wscript
