@@ -31,3 +31,5 @@ CLEANFILES = gtksourceview.c
 		--prefix py$* $*.defs) > gen-$*.c \
 	    && cp gen-$*.c $*.c \
 	    && rm -f gen-$*.c
+
+EXTRA_DIST += wscript
