@@ -30,3 +30,6 @@ CLEANFILES = mediaprofiles.c
 		--prefix py$* $*.defs) > gen-$*.c \
 	    && cp gen-$*.c $*.c \
 	    && rm -f gen-$*.c
+
+EXTRA_DIST += wscript
+
