@@ -35,3 +35,5 @@ plparser_la_LIBADD =				\
 EXTRA_DIST = plparser.defs plparser.override
 
 CLEANFILES = plparser.c
+
+EXTRA_DIST += wscript
