@@ -35,3 +35,6 @@ wnck.c: wnck.defs wnck.override
 	    --prefix py$* $*.defs) > gen-$*.c \
 	&& cp gen-$*.c $*.c \
 	&& rm -f gen-$*.c
+
+EXTRA_DIST += wscript
+
