@@ -1,3 +1,9 @@
+2007-12-16  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
+
+	reviewed by: <delete if not using a buddy>
+
+	* Makefile.am:
+
 2007-12-15  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	reviewed by: <delete if not using a buddy>
